--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,11 @@ services:
       context: ./leeterview-backend
       dockerfile: Dockerfile
     ports:
-      - "5281:5000"
+      - "5151:5000"
     environment:
       - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT:-Development}  # 預設 Development
       - ASPNETCORE_URLS=http://+:5000
-      - ConnectionStrings__DefaultConnection=Server=db;Database=LeeterviewDb;User=sa;Password=YourStrong@Password1;
       - NODE_ENV=${NODE_ENV}
+    env_file:
+      - ./leeterview-backend/.env  # 引用根目錄中的 .env 檔案
 
